altre cose utili

--- a/front_office/index.html
+++ b/front_office/index.html
@@ -24,8 +24,8 @@
         <!--Internal dependencies-->
         <script type="module" src="main_page.js"></script> <!---->
         
-        <link rel="stylesheet" href="/public/css/index.css">
-        <link rel="stylesheet" id="stylesheetComp" href="/public/css/access.css">
+        <link rel="stylesheet" href="front_office/index.css">
+        <!-- link rel="stylesheet" id="stylesheetComp" href="/public/css/access.css" -->
         
         <script>
 
