--- a/index.html
+++ b/index.html
@@ -73,26 +73,64 @@
 	<body>
 
         <div id="app">
-            <ul  id="navbar">
-                <li href="javascript:void(0);" class="menu" aria-labelledby="barsLabel">
-					<button onclick="openMenu()">
-						<i class="icon fa fa-bars"></i>
-						<span id="barsLabel" style="display: none;">Menu</span>
-					</button>
-				</li>
-                <li class="nav-item" data-placement="right" title="Grafici" onclick="load_new('/NewReg')">
-					<i class="fas fa-user-plus"></i>
-					<span id="chartsLabel" style="display: none;">New User</span>
-				</li>
-                <li class="nav-item" data-placement="right" title="Reserved" onclick="load_new('/Worker')">
-					<i class="icon fas fa-user-lock"></i>
-					<span id="workerLabel" style="display: none;">Worker</span>
-				</li>
-                <!-- li class="nav-item" data-placement="right" title="Grafici" onclick="load('/Worker')">
-					<i class="icon far fa-chart-bar"></i>
-					<span id="chartsLabel" style="display: none;">Grafici</span>
-				</li -->
-            </ul>
+
+            <nav class="navbar navbar-expand-lg">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse">
+                    <a id="logoname" class="nav-item" href="#">NoloNoloPlus</a>
+
+                    <ul class="navbar-nav navbar-nav ml-auto"></ul>
+                        <li class="nav-item" title="Reserved" data-toggle="modal" data-target="#loginModal">
+                            <a class="nav-item" > Login  </a>
+                        </li>
+                        <li class="nav-item" title="Reserved" onclick="load_new('/Worker')">
+                            <i class="icon fas fa-user-lock"></i>
+                            <span id="workerLabel" style="display: none;">Worker</span>
+                        </li>
+                    </ul>
+
+                </div>
+
+            </nav>
+		
+            <!-- modal for login -->
+            <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    </div>
+                    <div class="modal-body">Bentornato in NoloNoloPlus! 
+                        Inserisci i tuoi dati per iniziare i tuoi noleggi con noi! 
+                        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#newRegModal">
+                            Nuova registrazione
+                        </button>
+                    </div>
+                    <div class="modal-footer"> 
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Annulla</button>
+                        <button id="deletePostBtn" type="button" class="btn btn-primary" data-dismiss="modal">Conferma</button>
+                    </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- modal for new reg -->
+            <div class="modal fade" id="newRegModal" tabindex="-1" role="dialog" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    </div>
+                    <div class="modal-body">Benvenuto in NoloNoloPlus! </div>
+                    <div class="modal-footer"> 
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Annulla</button>
+                        <button id="deletePostBtn" type="button" class="btn btn-primary" data-dismiss="modal">Conferma</button>
+                    </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
 
