--- a/index.html
+++ b/index.html
@@ -116,6 +116,22 @@
                 </div>
             </div>
 
+            <!-- fra style 
+                <div class="loginbox">
+            <img src="img/avatar.png" class="avatar">
+            <h1>Login Here</h1>
+              <form>
+                <p>Username</p>
+                  <input type="text" name="" placeholder="Enter Username">
+                  <p>Password</p>
+                  <input type="text" name="" placeholder="Enter Password" id="myInput">
+                 !--da rivedere, serve a nascondere la password <input type="checkbox" onclick="myFunction()">Show Password--
+                 <input type="submit" name="" value="Login">
+                  
+                </form>
+             </div>
+            -->
+
             <!-- modal for new reg -->
             <div class="modal fade" id="newRegModal" tabindex="-1" role="dialog" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
