--- a/back_office/reserved.html
+++ b/back_office/reserved.html
@@ -47,10 +47,10 @@
 
         <!--Contenitore log in-->
         <div class="loginbox">
-            <img src="avatar.png" class="avatar">
+            <img src="img/avatar.png" class="avatar">
             <h1>Login Here</h1>
               <form>
-                  <p>Username</p>
+                <p>Username</p>
                   <input type="text" name="" placeholder="Enter Username">
                   <p>Password</p>
                   <input type="text" name="" placeholder="Enter Password" id="myInput">
@@ -58,11 +58,7 @@
                   <input type="submit" name="" value="Login">
                   
                 </form>
-
-
-
-
-
         </div>
+
 	</body>
 </html>
