--- a/back_office/reserved.html
+++ b/back_office/reserved.html
@@ -35,7 +35,7 @@
 	</head>
 
 	<body>
-        <nav class="navbar navbar-light bg-light">
+        <!--nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
                 <li class="nav-item" data-placement="right" title="Reserved" onclick="load('/Manager')">
@@ -43,13 +43,36 @@
               </a>
             </div>
           </nav>
-        </ul>
+        </ul-->
+      <div id="app">
+
+        <nav class="navbar navbar-expand-lg"> <!--background-color: #31708E;-->
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse">
+              <a id="logoname" class="nav-item" href="#">NoloNoloPlus</a>
+
+              <ul class="navbar-nav navbar-nav ml-auto"></ul>
+                  <li class="nav-item" title="Reserved"  >
+                      <a class="nav-link disabled" onclick="load('/Manager')"> Dashboard-manager </a>
+                  </li>
+                  <!-- li class="nav-item" title="Reserved" onclick="load_new('/Worker')">
+                      <i class="icon fas fa-user-lock"></i>
+                      <span id="workerLabel" style="display: none;">Worker</span>
+                  </li -->
+              </ul>
+
+          </div>
+
+      </nav>
+      </div>
 
         <!--Contenitore log in-->
         <div class="loginbox">
             <img src="img/avatar.png" class="avatar">
             <h1>Login Here</h1>
-              <form>
+              <form> <!-- background: rgb(173, 193, 247); -->
                 <p>Username</p>
                   <input type="text" name="" placeholder="Enter Username">
                     <p>Password</p>
