--- a/index.html
+++ b/index.html
@@ -99,21 +99,22 @@
             <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
+                        <img src="img/avatar.png" class="avatar">
                         <div class="modal-header text-center">
-                            <h4 class="modal-title w-100 font-weight-bold">Sign in</h4>
+                            <h4 class="modal-title w-100 font-weight-bold">Login here</h4>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
                         <div class="modal-body mx-3">
                             <div class="md-form mb-5">
-                            <input type="email" id="defaultForm-email" class="form-control validate">
-                            <label data-error="wrong" data-success="right" for="defaultForm-email">Your email</label>
+                                <label data-error="wrong" data-success="right" for="defaultForm-email">Username</label>
+                                <input type="email" id="defaultForm-email" class="form-control validate" placeholder="Enter Username">
                             </div>
 
                             <div class="md-form mb-4">
-                            <input type="password" id="defaultForm-pass" class="form-control validate">
-                            <label data-error="wrong" data-success="right" for="defaultForm-pass">Your password</label>
+                                <label data-error="wrong" data-success="right" for="defaultForm-pass">Password</label>
+                                <input type="password" id="defaultForm-pass" class="form-control validate" placeholder="Enter Password">
                             </div>
 
                         </div>
