--- a/back_office/reserved.html
+++ b/back_office/reserved.html
@@ -35,18 +35,10 @@
 	</head>
 
 	<body>
-        <!--nav class="navbar navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">
-                <li class="nav-item" data-placement="right" title="Reserved" onclick="load('/Manager')">
-                    <i class="fas fa-lock">  Managers</i>
-              </a>
-            </div>
-          </nav>
-        </ul-->
+    <!-- Navbar -->
       <div id="app">
 
-        <nav class="navbar navbar-expand-lg"> <!--background-color: #31708E;-->
+        <nav class="navbar navbar-expand-lg"> <!--background-color: #31708E; -->
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -54,38 +46,58 @@
               <a id="logoname" class="nav-item" href="#">NoloNoloPlus</a>
 
               <ul class="navbar-nav navbar-nav ml-auto"></ul>
-                  <li class="nav-item" title="Reserved"  >
+              <li class="nav-item" title="Workers" data-toggle="modal" data-target="#loginModal">
+                <a class="nav-item" > Login  </a>
+              </li>
                       <a class="nav-link disabled" onclick="load('/Manager')"> Dashboard-manager </a>
                   </li>
-                  <!-- li class="nav-item" title="Reserved" onclick="load_new('/Worker')">
-                      <i class="icon fas fa-user-lock"></i>
-                      <span id="workerLabel" style="display: none;">Worker</span>
-                  </li -->
               </ul>
-
           </div>
-
       </nav>
-      </div>
+      </div> 
 
-        <!--Contenitore log in-->
-        <div class="loginbox">
-            <img src="img/avatar.png" class="avatar">
-            <h1>Login Here</h1>
-              <form> <!-- background: rgb(173, 193, 247); -->
-                <p>Username</p>
-                  <input type="text" name="" placeholder="Enter Username">
-                    <p>Password</p>
-                    <input type="password" name="" placeholder="Enter Password" id="myInput">
-                    <p>Manager</p>
+
+       <!-- modal for login -->
+       <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <img src="img/avatar.png" class="avatar">
+                <div class="modal-header text-center">
+                    <h4 class="modal-title w-100 font-weight-bold">Login here</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mx-3">
+                    <div class="md-form mb-5">
+                        <label data-error="wrong" data-success="right" for="defaultForm-email">Username</label>
+                        <input type="text" id="defaultForm-email" class="form-control validate" placeholder="Enter Username">
+                    </div>
+
+                    <div class="md-form mb-4">
+                        <label data-error="wrong" data-success="right" for="defaultForm-pass">Password</label>
+                        <input type="password" id="defaultForm-pass" class="form-control validate" placeholder="Enter Password">
+                        &nbsp;
+                        &nbsp; <p>Manager</p>
+                      
                     <label class="switch">
                       <input type="checkbox"> 
                       <span class="slider round"></span>
                     </label>
-                  <input type="submit" name="" value="Login">
-                  
-                </form>
-        </div>
+                      </div>
 
+                </div>
+                <div class="modal-footer d-flex justify-content-center">
+                    <button class="btn btn-default">Login</button>
+                </div>
+            </div>
+        </div>
+    </div> 
+
+    <script type="text/javascript">
+      $(window).on('load',function(){
+          $('#loginModal').modal('show');
+      });
+  </script>
 	</body>
 </html>
