--- a/back_office/reserved.html
+++ b/back_office/reserved.html
@@ -43,7 +43,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse">
-              <a id="logoname" class="nav-item" href="#">NoloNoloPlus</a>
+              <!--<a id="logoname" class="nav-item" href="#">NoloNoloPlus</a>-->
 
               <ul class="navbar-nav navbar-nav ml-auto"></ul>
                       <a class="nav-link disabled" onclick="load('/Manager')"><i class="fas fa-lock">Dashboard</i></a>
@@ -104,13 +104,13 @@
   <div class="sidebar">
     <header>Activities</header>
     <ul>
-      <li><a href="#"><i class="fas fa-chart-line"></i>Dashboard</a></li>
-      <li><a href="#"><i class="fas fa-link"></i>Shortcuts</a></li>
-      <li><a href="#"><i class="fas fa-stream"></i>Overview</a></li>
-      <li><a href="#"><i class="fas fa-calendar-week"></i>Events</a></li>
-      <li><a href="#"><i class="fas fa-question-circle"></i>About</a></li>
+      <li><a href="#"><i class="fas fa-archive"></i>Inventory</a></li>  <!--per vedere l'inventario degli ogetti-->
+      <li><a href="#"><i class="fas fa-truck-loading"></i>Rents</a></li> <!--per vedere tutti i noleggi-->
+      <li><a href="#"><i class="far fa-address-card"></i>Clients</a></li> <!--per vedere tutti i clienti -->
+      <li><a href="#"><i class="far fa-calendar-alt"></i>Calendar</a></li> <!--per vedere il calendario dei noleggi-->
+      <li><a href="#"><i class="far fa-envelope"></i></i>Contact</a></li> <!--per contattare il manager-->
+      <li><a href="#"><i class="far fa-id-badge"></i>Personal Area</a></li> <!--per vedere informazioni personali-->
       <li><a href="#"><i class="fas fa-sliders-h"></i>Services</a></li>
-      <li><a href="#"><i class="fas fa-envelope"></i>Contact</a></li>
     </ul>
   </div>
 	</body>
