--- a/back_office/reserved.html
+++ b/back_office/reserved.html
@@ -96,14 +96,10 @@
           $('#loginModal').modal('show');
       });
   </script>
-  <input type="checkbox" id="check">
-  <label for="check">
-    <i class="fas fa-bars" id="btn"></i>
-    <i class="fas fa-times" id="cancel"></i>
-  </label>
+<!--SIDEBAR ATTIVITA' FUNZIONARI-->
   <div class="sidebar">
     <header>Activities</header>
-    <ul>
+    <ul> 
       <li><a href="#"><i class="fas fa-archive"></i>Inventory</a></li>  <!--per vedere l'inventario degli ogetti-->
       <li><a href="#"><i class="fas fa-truck-loading"></i>Rents</a></li> <!--per vedere tutti i noleggi-->
       <li><a href="#"><i class="far fa-address-card"></i>Clients</a></li> <!--per vedere tutti i clienti -->
