--- a/back_office/reserved.html
+++ b/back_office/reserved.html
@@ -106,6 +106,7 @@
     </ul>
   </div>
   <div id="reserved">  <!--mettere misure per togliere la barre-->
+    <div class="tab"></div>
     <!-- button id="client Btn" @click="openClient" title="clientTable">
         <i class="far fa-address-card"></i>
     </button -->
