modifiche freccia manager

--- a/back_office/manager.html
+++ b/back_office/manager.html
@@ -39,23 +39,16 @@
 <body>
     <!-- Navbar -->
     <div id="app" style="background-color: chocolate;">
-
         <nav class="navbar navbar-expand-lg" style="background-color: blueviolet;">
-            <!--background-color: #31708E; -->
 
-            <div class="collapse navbar-collapse " style="background-color: blue;">
-                <!--<a id="logoname" class="nav-item" href="#">NoloNoloPlus</a>-->
-                <ul>
-                    <a onclick="load_new('/Worker')" style="color: white; left: 200px;"><i class="fas fa-long-arrow-alt-left fa-2x" ></i></a>
-                </ul>
-                <ul class="navbar-nav navbar-nav ml-auto"></ul>
-                <a onclick="load_new('/Worker')" style="color: white;"><i class="fas fa-long-arrow-alt-left fa-2x" ></i></a>
-                <a class="nav-link disabled" onclick="load('/Manager')"><i class="fas fa-lock">Dashboard</i></a>
-                </li>
+
+            <ul class="navbar-nav navbar-nav ml-auto">
+                <a onclick="load_new('/Worker')" style="color: white; nav-right: auto;"><i class="fas fa-long-arrow-alt-left fa-2x"  ></i></a> &nbsp; &nbsp;
+
                 <a onclick="load('/Client')" style="color: white; nav-right: auto;"><i class="fas fa-sign-out-alt fa-2x"></i></a>
-                </ul>
-            </div>
-        </nav>
+            </ul>
+    </div>
+    </nav>
     </div>
 
 
@@ -106,7 +99,7 @@
     <i class="fas fa-times" id="cancel"></i>
   </label>
 -->
-
+    <!--
     <div class="sidebar">
         <header>Activities</header>
         <ul>
@@ -116,7 +109,7 @@
 
         </ul>
     </div>
-
+-->
 </body>
 
 </html>
