--- a/back_office/reserved.html
+++ b/back_office/reserved.html
@@ -107,11 +107,13 @@
       <li><a href="#"><i class="fas fa-sliders-h"></i>Services</a></li>
     </ul>
   </div>
+
   <div id="reserved">  <!--mettere misure per togliere la barre-->
-    <div class="tab"></div>
+    <div id="inner"></div>
     <!-- button id="client Btn" @click="openClient" title="clientTable">
         <i class="far fa-address-card"></i>
     </button -->
+      
   </div>
 
 <script type="text/javascript">
