--- a/back_office/reserved.html
+++ b/back_office/reserved.html
@@ -106,10 +106,9 @@
       <li><a href="#"><i class="far fa-id-badge"></i>Personal Area</a></li> <!--per vedere informazioni personali-->
       <li><a href="#"><i class="fas fa-sliders-h"></i>Services</a></li>
     </ul>
-  </div>
-
-  <div id="reserved">  <!--mettere misure per togliere la barre-->
-    <div id="inner"></div>
+  </div> <!--mettere misure per togliere la barre-->
+    <div id="inner">
+    </div>
     <!-- button id="client Btn" @click="openClient" title="clientTable">
         <i class="far fa-address-card"></i>
     </button -->
