modifiche di struttura

--- a/manager.html
+++ b/manager.html
@@ -18,11 +18,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
     <!--Internal dependencies-->
-    <script type="module" src="main_page.js"></script>
-    <script type="module" src="reserved.js"></script>
+    <!--script type="module" src="main_page.js"></script-->
+    <script type="module" src="public/js/reserved.js"></script>
     <!---->
 
-    <link rel="stylesheet" href="reserved.css">
+    <link rel="stylesheet" href="public/css/manager.css">
     <!-- link rel="stylesheet" id="stylesheetComp" href="/public/css/access.css" -->
 
     <script>
