--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
-                        <img src="/img/avatar.png" class="avatar">
+                        <img src="public/img/avatar.png" class="avatar">
                         <div class="modal-header text-center">
                             <h4 class="modal-title w-100 font-weight-bold">Login here</h4>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
