changes in manager

--- a/reserved.html
+++ b/reserved.html
@@ -48,7 +48,7 @@
                 <!--<a id="logoname" class="nav-item" href="#">NoloNoloPlus</a>-->
 
                 <ul class="navbar-nav navbar-nav ml-auto"></ul>
-                <a class="nav-link disabled" onclick="load('/Manager')"><i class="fas fa-lock">Dashboard</i></a>
+                <!-- (dentro nav-link) disabled --><a class="nav-link" onclick="load('/manager-module')"><i class="fas fa-lock">Dashboard</i></a>
                 </li>
                 </ul>
             </div>
