--- a/manager.html
+++ b/manager.html
@@ -13,10 +13,11 @@
 </head>
 
 <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
+    <!--<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script> -->
+    <div id="root"></div>
 
-    </div>
+    <script src="Navbar.js"></script>
 
 </body>
 
