--- a/manager.html
+++ b/manager.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
 
-    <script src="/public/js/manager.js"></script>
+    <script type="text/babel" src= "/public/js/manager.js"></script>
 
     <title>Manager</title>
 </head>
@@ -18,8 +18,6 @@
     <!--<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script> -->
     <div id="root"></div>
-
-   
 
 </body>
 
