worker module changing

--- a/reserved.html
+++ b/reserved.html
@@ -106,8 +106,9 @@
       <li><a href="#"><i class="fas fa-sliders-h"></i>Services</a></li>
     </ul>
   </div> <!--mettere misure per togliere la barre-->
-    <div id="inner">
-    </div>
+    
+         <div id="ctable"></div>
+    
     <!-- button id="client Btn" @click="openClient" title="clientTable">
         <i class="far fa-address-card"></i>
     </button -->
